--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
         "intl-segmenter-polyfill": "^0.4.4",
-        "preact": "^10.11.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "@preact/preset-vite": "^2.5.0",
         "@types/uuid": "^9.0.1",
         "@typescript-eslint/eslint-plugin": "^5.53.0",
         "@typescript-eslint/parser": "^5.53.0",
+        "@vitejs/plugin-react": "^3.1.0",
         "eslint": "^8.35.0",
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-import": "^2.27.5",
