--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.27.5",
     "jest": "^29.5.0",
     "prettier": "^2.8.4",
+    "sass": "^1.60.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
