--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.4",
     "sass": "^1.60.0",
+    "terser": "^5.17.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
