--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.1",
+    "bcp-47-match": "^2.0.3",
     "intl-segmenter-polyfill": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
