--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "build-dictionaries": "node src/dictionaries/generate.js"
   },
   "dependencies": {
     "@types/react": "^18.0.28",
